--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,17 @@
                     <a class="nav-link" href="{{ path('app_measurement_index') }}">Prognozy</a>
                 </li>
             </ul>
+            <ul class="navbar-nav ms-auto">
+                {% if is_granted('ROLE_USER') %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_login') }}">Login</a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
     </div>
 </nav>
