--- a/templates/location/index.html.twig
+++ b/templates/location/index.html.twig
@@ -3,39 +3,47 @@
 {% block title %}Location index{% endblock %}
 
 {% block body %}
-    <h1>Location index</h1>
+    {% if is_granted('ROLE_LOCATION_INDEX') %}
+        <h1>Location index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>City</th>
-                <th>Country</th>
-                <th>Latitude</th>
-                <th>Longtitude</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for location in locations %}
-            <tr>
-                <td>{{ location.id }}</td>
-                <td>{{ location.city }}</td>
-                <td>{{ location.country }}</td>
-                <td>{{ location.latitude }}</td>
-                <td>{{ location.longtitude }}</td>
-                <td>
-                    <a href="{{ path('app_location_show', {'id': location.id}) }}">show</a>
-                    <a href="{{ path('app_location_edit', {'id': location.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>City</th>
+                    <th>Country</th>
+                    <th>Latitude</th>
+                    <th>Longtitude</th>
+                    <th>actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for location in locations %}
+                <tr>
+                    <td>{{ location.id }}</td>
+                    <td>{{ location.city }}</td>
+                    <td>{{ location.country }}</td>
+                    <td>{{ location.latitude }}</td>
+                    <td>{{ location.longtitude }}</td>
+                    <td>
+                        {% if is_granted('ROLE_LOCATION_SHOW') %}
+                            <a href="{{ path('app_location_show', {'id': location.id}) }}">show</a>
+                        {% endif %}
+                        {% if is_granted('ROLE_LOCATION_EDIT') %}
+                            <a href="{{ path('app_location_edit', {'id': location.id}) }}">edit</a>
+                        {% endif %}
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="6">no records found</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        {% if is_granted('ROLE_LOCATION_NEW') %}
+            <a href="{{ path('app_location_new') }}">Create new</a>
+        {% endif %}
+    {% endif %}
 
-    <a href="{{ path('app_location_new') }}">Create new</a>
 {% endblock %}
